parser.output
Grammar

    0 $accept: programa $end

    1 programa: declaracoes config bloco_repita

    2 declaracoes: declaracoes declaracao
    3            | ε

    4 declaracao: VAR tipo ':' lista_ids ';'

    5 tipo: INTEIRO
    6     | BOOLEANO
    7     | TEXTO

    8 lista_ids: ID
    9          | lista_ids ',' ID

   10 config: CONFIG comandos FIM

   11 bloco_repita: REPITA comandos FIM

   12 comandos: comandos comando
   13         | ε

   14 comando: atribuicao
   15        | configuracao
   16        | controle
   17        | acao
   18        | io_comunicacao

   19 atribuicao: ID IGUAL expressao ';'

   20 expressao: NUM
   21          | STRING
   22          | ID
   23          | expressao OP_REL expressao
   24          | expressao OP_ARIT expressao

   25 configuracao: CONFIGURAR ID COMO SAIDA ';'
   26             | CONFIGURAR ID COMO ENTRADA ';'
   27             | CONFIGURAR_PWM ID COM_VALOR NUM FREQUENCIA NUM RESOLUCAO NUM ';'
   28             | CONECTARWIFI ID ID ';'
   29             | CONFIGURAR_SERIAL NUM ';'

   30 controle: SE expressao ENTAO comandos SENAO comandos FIM
   31         | SE expressao ENTAO comandos FIM
   32         | ENQUANTO comandos FIM

   33 acao: AJUSTAR_PWM ID COM_VALOR expressao ';'
   34     | ESPERAR NUM ';'
   35     | LIGAR ID ';'
   36     | DESLIGAR ID ';'

   37 io_comunicacao: ESCREVER_SERIAL STRING ';'
   38               | ID IGUAL LER_SERIAL ';'
   39               | ID IGUAL LER_DIGITAL ID ';'
   40               | ID IGUAL LER_ANALOGICO ID ';'
   41               | ENVIAR_HTTP STRING STRING ';'


Terminals, with rules where they appear

    $end (0) 0
    ',' (44) 9
    ':' (58) 4
    ';' (59) 4 19 25 26 27 28 29 33 34 35 36 37 38 39 40 41
    error (256)
    CONFIG (258) 10
    REPITA (259) 11
    FIM (260) 10 11 30 31 32
    VAR (261) 4
    INTEIRO (262) 5
    BOOLEANO (263) 6
    TEXTO (264) 7
    SE (265) 30 31
    ENTAO (266) 30 31
    SENAO (267) 30
    ENQUANTO (268) 32
    CONFIGURAR (269) 25 26
    CONFIGURAR_PWM (270) 27
    AJUSTAR_PWM (271) 33
    ESPERAR (272) 34
    CONECTARWIFI (273) 28
    LIGAR (274) 35
    DESLIGAR (275) 36
    ESCREVER_SERIAL (276) 37
    LER_SERIAL (277) 38
    ENVIAR_HTTP (278) 41
    CONFIGURAR_SERIAL (279) 29
    LER_DIGITAL (280) 39
    LER_ANALOGICO (281) 40
    ID (282) 8 9 19 22 25 26 27 28 33 35 36 38 39 40
    NUM (283) 20 27 29 34
    STRING (284) 21 37 41
    IGUAL (285) 19 38 39 40
    COM_VALOR (286) 27 33
    COMO (287) 25 26
    SAIDA (288) 25
    ENTRADA (289) 26
    FREQUENCIA (290) 27
    RESOLUCAO (291) 27
    OP_REL (292) 23
    OP_ARIT (293) 24


Nonterminals, with rules where they appear

    $accept (42)
        on left: 0
    programa (43)
        on left: 1
        on right: 0
    declaracoes (44)
        on left: 2 3
        on right: 1 2
    declaracao (45)
        on left: 4
        on right: 2
    tipo (46)
        on left: 5 6 7
        on right: 4
    lista_ids (47)
        on left: 8 9
        on right: 4 9
    config (48)
        on left: 10
        on right: 1
    bloco_repita (49)
        on left: 11
        on right: 1
    comandos (50)
        on left: 12 13
        on right: 10 11 12 30 31 32
    comando (51)
        on left: 14 15 16 17 18
        on right: 12
    atribuicao (52)
        on left: 19
        on right: 14
    expressao (53)
        on left: 20 21 22 23 24
        on right: 19 23 24 30 31 33
    configuracao (54)
        on left: 25 26 27 28 29
        on right: 15
    controle (55)
        on left: 30 31 32
        on right: 16
    acao (56)
        on left: 33 34 35 36
        on right: 17
    io_comunicacao (57)
        on left: 37 38 39 40 41
        on right: 18


State 0

    0 $accept: • programa $end

    $default  reduce using rule 3 (declaracoes)

    programa     go to state 1
    declaracoes  go to state 2


State 1

    0 $accept: programa • $end

    $end  shift, and go to state 3


State 2

    1 programa: declaracoes • config bloco_repita
    2 declaracoes: declaracoes • declaracao

    CONFIG  shift, and go to state 4
    VAR     shift, and go to state 5

    declaracao  go to state 6
    config      go to state 7


State 3

    0 $accept: programa $end •

    $default  accept


State 4

   10 config: CONFIG • comandos FIM

    $default  reduce using rule 13 (comandos)

    comandos  go to state 8


State 5

    4 declaracao: VAR • tipo ':' lista_ids ';'

    INTEIRO   shift, and go to state 9
    BOOLEANO  shift, and go to state 10
    TEXTO     shift, and go to state 11

    tipo  go to state 12


State 6

    2 declaracoes: declaracoes declaracao •

    $default  reduce using rule 2 (declaracoes)


State 7

    1 programa: declaracoes config • bloco_repita

    REPITA  shift, and go to state 13

    bloco_repita  go to state 14


State 8

   10 config: CONFIG comandos • FIM
   12 comandos: comandos • comando

    FIM                shift, and go to state 15
    SE                 shift, and go to state 16
    ENQUANTO           shift, and go to state 17
    CONFIGURAR         shift, and go to state 18
    CONFIGURAR_PWM     shift, and go to state 19
    AJUSTAR_PWM        shift, and go to state 20
    ESPERAR            shift, and go to state 21
    CONECTARWIFI       shift, and go to state 22
    LIGAR              shift, and go to state 23
    DESLIGAR           shift, and go to state 24
    ESCREVER_SERIAL    shift, and go to state 25
    ENVIAR_HTTP        shift, and go to state 26
    CONFIGURAR_SERIAL  shift, and go to state 27
    ID                 shift, and go to state 28

    comando         go to state 29
    atribuicao      go to state 30
    configuracao    go to state 31
    controle        go to state 32
    acao            go to state 33
    io_comunicacao  go to state 34


State 9

    5 tipo: INTEIRO •

    $default  reduce using rule 5 (tipo)


State 10

    6 tipo: BOOLEANO •

    $default  reduce using rule 6 (tipo)


State 11

    7 tipo: TEXTO •

    $default  reduce using rule 7 (tipo)


State 12

    4 declaracao: VAR tipo • ':' lista_ids ';'

    ':'  shift, and go to state 35


State 13

   11 bloco_repita: REPITA • comandos FIM

    $default  reduce using rule 13 (comandos)

    comandos  go to state 36


State 14

    1 programa: declaracoes config bloco_repita •

    $default  reduce using rule 1 (programa)


State 15

   10 config: CONFIG comandos FIM •

    $default  reduce using rule 10 (config)


State 16

   30 controle: SE • expressao ENTAO comandos SENAO comandos FIM
   31         | SE • expressao ENTAO comandos FIM

    ID      shift, and go to state 37
    NUM     shift, and go to state 38
    STRING  shift, and go to state 39

    expressao  go to state 40


State 17

   32 controle: ENQUANTO • comandos FIM

    $default  reduce using rule 13 (comandos)

    comandos  go to state 41


State 18

   25 configuracao: CONFIGURAR • ID COMO SAIDA ';'
   26             | CONFIGURAR • ID COMO ENTRADA ';'

    ID  shift, and go to state 42


State 19

   27 configuracao: CONFIGURAR_PWM • ID COM_VALOR NUM FREQUENCIA NUM RESOLUCAO NUM ';'

    ID  shift, and go to state 43


State 20

   33 acao: AJUSTAR_PWM • ID COM_VALOR expressao ';'

    ID  shift, and go to state 44


State 21

   34 acao: ESPERAR • NUM ';'

    NUM  shift, and go to state 45


State 22

   28 configuracao: CONECTARWIFI • ID ID ';'

    ID  shift, and go to state 46


State 23

   35 acao: LIGAR • ID ';'

    ID  shift, and go to state 47


State 24

   36 acao: DESLIGAR • ID ';'

    ID  shift, and go to state 48


State 25

   37 io_comunicacao: ESCREVER_SERIAL • STRING ';'

    STRING  shift, and go to state 49


State 26

   41 io_comunicacao: ENVIAR_HTTP • STRING STRING ';'

    STRING  shift, and go to state 50


State 27

   29 configuracao: CONFIGURAR_SERIAL • NUM ';'

    NUM  shift, and go to state 51


State 28

   19 atribuicao: ID • IGUAL expressao ';'
   38 io_comunicacao: ID • IGUAL LER_SERIAL ';'
   39               | ID • IGUAL LER_DIGITAL ID ';'
   40               | ID • IGUAL LER_ANALOGICO ID ';'

    IGUAL  shift, and go to state 52


State 29

   12 comandos: comandos comando •

    $default  reduce using rule 12 (comandos)


State 30

   14 comando: atribuicao •

    $default  reduce using rule 14 (comando)


State 31

   15 comando: configuracao •

    $default  reduce using rule 15 (comando)


State 32

   16 comando: controle •

    $default  reduce using rule 16 (comando)


State 33

   17 comando: acao •

    $default  reduce using rule 17 (comando)


State 34

   18 comando: io_comunicacao •

    $default  reduce using rule 18 (comando)


State 35

    4 declaracao: VAR tipo ':' • lista_ids ';'

    ID  shift, and go to state 53

    lista_ids  go to state 54


State 36

   11 bloco_repita: REPITA comandos • FIM
   12 comandos: comandos • comando

    FIM                shift, and go to state 55
    SE                 shift, and go to state 16
    ENQUANTO           shift, and go to state 17
    CONFIGURAR         shift, and go to state 18
    CONFIGURAR_PWM     shift, and go to state 19
    AJUSTAR_PWM        shift, and go to state 20
    ESPERAR            shift, and go to state 21
    CONECTARWIFI       shift, and go to state 22
    LIGAR              shift, and go to state 23
    DESLIGAR           shift, and go to state 24
    ESCREVER_SERIAL    shift, and go to state 25
    ENVIAR_HTTP        shift, and go to state 26
    CONFIGURAR_SERIAL  shift, and go to state 27
    ID                 shift, and go to state 28

    comando         go to state 29
    atribuicao      go to state 30
    configuracao    go to state 31
    controle        go to state 32
    acao            go to state 33
    io_comunicacao  go to state 34


State 37

   22 expressao: ID •

    $default  reduce using rule 22 (expressao)


State 38

   20 expressao: NUM •

    $default  reduce using rule 20 (expressao)


State 39

   21 expressao: STRING •

    $default  reduce using rule 21 (expressao)


State 40

   23 expressao: expressao • OP_REL expressao
   24          | expressao • OP_ARIT expressao
   30 controle: SE expressao • ENTAO comandos SENAO comandos FIM
   31         | SE expressao • ENTAO comandos FIM

    ENTAO    shift, and go to state 56
    OP_REL   shift, and go to state 57
    OP_ARIT  shift, and go to state 58


State 41

   12 comandos: comandos • comando
   32 controle: ENQUANTO comandos • FIM

    FIM                shift, and go to state 59
    SE                 shift, and go to state 16
    ENQUANTO           shift, and go to state 17
    CONFIGURAR         shift, and go to state 18
    CONFIGURAR_PWM     shift, and go to state 19
    AJUSTAR_PWM        shift, and go to state 20
    ESPERAR            shift, and go to state 21
    CONECTARWIFI       shift, and go to state 22
    LIGAR              shift, and go to state 23
    DESLIGAR           shift, and go to state 24
    ESCREVER_SERIAL    shift, and go to state 25
    ENVIAR_HTTP        shift, and go to state 26
    CONFIGURAR_SERIAL  shift, and go to state 27
    ID                 shift, and go to state 28

    comando         go to state 29
    atribuicao      go to state 30
    configuracao    go to state 31
    controle        go to state 32
    acao            go to state 33
    io_comunicacao  go to state 34


State 42

   25 configuracao: CONFIGURAR ID • COMO SAIDA ';'
   26             | CONFIGURAR ID • COMO ENTRADA ';'

    COMO  shift, and go to state 60


State 43

   27 configuracao: CONFIGURAR_PWM ID • COM_VALOR NUM FREQUENCIA NUM RESOLUCAO NUM ';'

    COM_VALOR  shift, and go to state 61


State 44

   33 acao: AJUSTAR_PWM ID • COM_VALOR expressao ';'

    COM_VALOR  shift, and go to state 62


State 45

   34 acao: ESPERAR NUM • ';'

    ';'  shift, and go to state 63


State 46

   28 configuracao: CONECTARWIFI ID • ID ';'

    ID  shift, and go to state 64


State 47

   35 acao: LIGAR ID • ';'

    ';'  shift, and go to state 65


State 48

   36 acao: DESLIGAR ID • ';'

    ';'  shift, and go to state 66


State 49

   37 io_comunicacao: ESCREVER_SERIAL STRING • ';'

    ';'  shift, and go to state 67


State 50

   41 io_comunicacao: ENVIAR_HTTP STRING • STRING ';'

    STRING  shift, and go to state 68


State 51

   29 configuracao: CONFIGURAR_SERIAL NUM • ';'

    ';'  shift, and go to state 69


State 52

   19 atribuicao: ID IGUAL • expressao ';'
   38 io_comunicacao: ID IGUAL • LER_SERIAL ';'
   39               | ID IGUAL • LER_DIGITAL ID ';'
   40               | ID IGUAL • LER_ANALOGICO ID ';'

    LER_SERIAL     shift, and go to state 70
    LER_DIGITAL    shift, and go to state 71
    LER_ANALOGICO  shift, and go to state 72
    ID             shift, and go to state 37
    NUM            shift, and go to state 38
    STRING         shift, and go to state 39

    expressao  go to state 73


State 53

    8 lista_ids: ID •

    $default  reduce using rule 8 (lista_ids)


State 54

    4 declaracao: VAR tipo ':' lista_ids • ';'
    9 lista_ids: lista_ids • ',' ID

    ';'  shift, and go to state 74
    ','  shift, and go to state 75


State 55

   11 bloco_repita: REPITA comandos FIM •

    $default  reduce using rule 11 (bloco_repita)


State 56

   30 controle: SE expressao ENTAO • comandos SENAO comandos FIM
   31         | SE expressao ENTAO • comandos FIM

    $default  reduce using rule 13 (comandos)

    comandos  go to state 76


State 57

   23 expressao: expressao OP_REL • expressao

    ID      shift, and go to state 37
    NUM     shift, and go to state 38
    STRING  shift, and go to state 39

    expressao  go to state 77


State 58

   24 expressao: expressao OP_ARIT • expressao

    ID      shift, and go to state 37
    NUM     shift, and go to state 38
    STRING  shift, and go to state 39

    expressao  go to state 78


State 59

   32 controle: ENQUANTO comandos FIM •

    $default  reduce using rule 32 (controle)


State 60

   25 configuracao: CONFIGURAR ID COMO • SAIDA ';'
   26             | CONFIGURAR ID COMO • ENTRADA ';'

    SAIDA    shift, and go to state 79
    ENTRADA  shift, and go to state 80


State 61

   27 configuracao: CONFIGURAR_PWM ID COM_VALOR • NUM FREQUENCIA NUM RESOLUCAO NUM ';'

    NUM  shift, and go to state 81


State 62

   33 acao: AJUSTAR_PWM ID COM_VALOR • expressao ';'

    ID      shift, and go to state 37
    NUM     shift, and go to state 38
    STRING  shift, and go to state 39

    expressao  go to state 82


State 63

   34 acao: ESPERAR NUM ';' •

    $default  reduce using rule 34 (acao)


State 64

   28 configuracao: CONECTARWIFI ID ID • ';'

    ';'  shift, and go to state 83


State 65

   35 acao: LIGAR ID ';' •

    $default  reduce using rule 35 (acao)


State 66

   36 acao: DESLIGAR ID ';' •

    $default  reduce using rule 36 (acao)


State 67

   37 io_comunicacao: ESCREVER_SERIAL STRING ';' •

    $default  reduce using rule 37 (io_comunicacao)


State 68

   41 io_comunicacao: ENVIAR_HTTP STRING STRING • ';'

    ';'  shift, and go to state 84


State 69

   29 configuracao: CONFIGURAR_SERIAL NUM ';' •

    $default  reduce using rule 29 (configuracao)


State 70

   38 io_comunicacao: ID IGUAL LER_SERIAL • ';'

    ';'  shift, and go to state 85


State 71

   39 io_comunicacao: ID IGUAL LER_DIGITAL • ID ';'

    ID  shift, and go to state 86


State 72

   40 io_comunicacao: ID IGUAL LER_ANALOGICO • ID ';'

    ID  shift, and go to state 87


State 73

   19 atribuicao: ID IGUAL expressao • ';'
   23 expressao: expressao • OP_REL expressao
   24          | expressao • OP_ARIT expressao

    OP_REL   shift, and go to state 57
    OP_ARIT  shift, and go to state 58
    ';'      shift, and go to state 88


State 74

    4 declaracao: VAR tipo ':' lista_ids ';' •

    $default  reduce using rule 4 (declaracao)


State 75

    9 lista_ids: lista_ids ',' • ID

    ID  shift, and go to state 89


State 76

   12 comandos: comandos • comando
   30 controle: SE expressao ENTAO comandos • SENAO comandos FIM
   31         | SE expressao ENTAO comandos • FIM

    FIM                shift, and go to state 90
    SE                 shift, and go to state 16
    SENAO              shift, and go to state 91
    ENQUANTO           shift, and go to state 17
    CONFIGURAR         shift, and go to state 18
    CONFIGURAR_PWM     shift, and go to state 19
    AJUSTAR_PWM        shift, and go to state 20
    ESPERAR            shift, and go to state 21
    CONECTARWIFI       shift, and go to state 22
    LIGAR              shift, and go to state 23
    DESLIGAR           shift, and go to state 24
    ESCREVER_SERIAL    shift, and go to state 25
    ENVIAR_HTTP        shift, and go to state 26
    CONFIGURAR_SERIAL  shift, and go to state 27
    ID                 shift, and go to state 28

    comando         go to state 29
    atribuicao      go to state 30
    configuracao    go to state 31
    controle        go to state 32
    acao            go to state 33
    io_comunicacao  go to state 34


State 77

   23 expressao: expressao • OP_REL expressao
   23          | expressao OP_REL expressao •
   24          | expressao • OP_ARIT expressao

    OP_ARIT  shift, and go to state 58

    $default  reduce using rule 23 (expressao)


State 78

   23 expressao: expressao • OP_REL expressao
   24          | expressao • OP_ARIT expressao
   24          | expressao OP_ARIT expressao •

    $default  reduce using rule 24 (expressao)


State 79

   25 configuracao: CONFIGURAR ID COMO SAIDA • ';'

    ';'  shift, and go to state 92


State 80

   26 configuracao: CONFIGURAR ID COMO ENTRADA • ';'

    ';'  shift, and go to state 93


State 81

   27 configuracao: CONFIGURAR_PWM ID COM_VALOR NUM • FREQUENCIA NUM RESOLUCAO NUM ';'

    FREQUENCIA  shift, and go to state 94


State 82

   23 expressao: expressao • OP_REL expressao
   24          | expressao • OP_ARIT expressao
   33 acao: AJUSTAR_PWM ID COM_VALOR expressao • ';'

    OP_REL   shift, and go to state 57
    OP_ARIT  shift, and go to state 58
    ';'      shift, and go to state 95


State 83

   28 configuracao: CONECTARWIFI ID ID ';' •

    $default  reduce using rule 28 (configuracao)


State 84

   41 io_comunicacao: ENVIAR_HTTP STRING STRING ';' •

    $default  reduce using rule 41 (io_comunicacao)


State 85

   38 io_comunicacao: ID IGUAL LER_SERIAL ';' •

    $default  reduce using rule 38 (io_comunicacao)


State 86

   39 io_comunicacao: ID IGUAL LER_DIGITAL ID • ';'

    ';'  shift, and go to state 96


State 87

   40 io_comunicacao: ID IGUAL LER_ANALOGICO ID • ';'

    ';'  shift, and go to state 97


State 88

   19 atribuicao: ID IGUAL expressao ';' •

    $default  reduce using rule 19 (atribuicao)


State 89

    9 lista_ids: lista_ids ',' ID •

    $default  reduce using rule 9 (lista_ids)


State 90

   31 controle: SE expressao ENTAO comandos FIM •

    $default  reduce using rule 31 (controle)


State 91

   30 controle: SE expressao ENTAO comandos SENAO • comandos FIM

    $default  reduce using rule 13 (comandos)

    comandos  go to state 98


State 92

   25 configuracao: CONFIGURAR ID COMO SAIDA ';' •

    $default  reduce using rule 25 (configuracao)


State 93

   26 configuracao: CONFIGURAR ID COMO ENTRADA ';' •

    $default  reduce using rule 26 (configuracao)


State 94

   27 configuracao: CONFIGURAR_PWM ID COM_VALOR NUM FREQUENCIA • NUM RESOLUCAO NUM ';'

    NUM  shift, and go to state 99


State 95

   33 acao: AJUSTAR_PWM ID COM_VALOR expressao ';' •

    $default  reduce using rule 33 (acao)


State 96

   39 io_comunicacao: ID IGUAL LER_DIGITAL ID ';' •

    $default  reduce using rule 39 (io_comunicacao)


State 97

   40 io_comunicacao: ID IGUAL LER_ANALOGICO ID ';' •

    $default  reduce using rule 40 (io_comunicacao)


State 98

   12 comandos: comandos • comando
   30 controle: SE expressao ENTAO comandos SENAO comandos • FIM

    FIM                shift, and go to state 100
    SE                 shift, and go to state 16
    ENQUANTO           shift, and go to state 17
    CONFIGURAR         shift, and go to state 18
    CONFIGURAR_PWM     shift, and go to state 19
    AJUSTAR_PWM        shift, and go to state 20
    ESPERAR            shift, and go to state 21
    CONECTARWIFI       shift, and go to state 22
    LIGAR              shift, and go to state 23
    DESLIGAR           shift, and go to state 24
    ESCREVER_SERIAL    shift, and go to state 25
    ENVIAR_HTTP        shift, and go to state 26
    CONFIGURAR_SERIAL  shift, and go to state 27
    ID                 shift, and go to state 28

    comando         go to state 29
    atribuicao      go to state 30
    configuracao    go to state 31
    controle        go to state 32
    acao            go to state 33
    io_comunicacao  go to state 34


State 99

   27 configuracao: CONFIGURAR_PWM ID COM_VALOR NUM FREQUENCIA NUM • RESOLUCAO NUM ';'

    RESOLUCAO  shift, and go to state 101


State 100

   30 controle: SE expressao ENTAO comandos SENAO comandos FIM •

    $default  reduce using rule 30 (controle)


State 101

   27 configuracao: CONFIGURAR_PWM ID COM_VALOR NUM FREQUENCIA NUM RESOLUCAO • NUM ';'

    NUM  shift, and go to state 102


State 102

   27 configuracao: CONFIGURAR_PWM ID COM_VALOR NUM FREQUENCIA NUM RESOLUCAO NUM • ';'

    ';'  shift, and go to state 103


State 103

   27 configuracao: CONFIGURAR_PWM ID COM_VALOR NUM FREQUENCIA NUM RESOLUCAO NUM ';' •

    $default  reduce using rule 27 (configuracao)
